[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyheos"
version = "0.7.4"
description = "An async python library for controlling HEOS devices through the HEOS CLI Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "ASL 2.0" }
authors = [{ name = "Andrew Sayre", email = "andrew@sayre.net" }]
keywords = ["heos", "dennon", "maranz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Source Code" = "https://github.com/andrewsayre/pyheo"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.ruff]
# Assume Python 3.11
target-version = "py311"
